# teor_aut_lab1

./: .gitignore  CMakeLists.txt  Makefile  build.sh  tmp.txt
src/: CMakeLists.txt  dnf.cpp  impl.cpp  main.cpp  types.h
